# nyaasi-api

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  app.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py
NyaaPy/: __init__.py  nyaa.py  utils.py
nyaasiapi/: __init__.py  endpoints.py  routes.py
