[tool.poetry]
name = "nyaasiapi"
version = "0.2.0"
description = "Unofficial nyaa.si HTTP API based on scrapping NyaaPy Python library."
authors = ["samedamci <samedamci@disroot.org>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.68.1"
nyaapy = "^0.6.1"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
